# f1manager

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODESTYLE.md  README.md  concept_flow.mermaid  cpp.cmd  cpp.py  gitignore  state_diagram.mermaid
.github/workflows/: cmake-msvc.yml
apps/viewer/: main.cpp
docs/: ADR-0000-template.md  ADR-0001-test-framework.md  ADR-0002-graphics-lib.md  ADR-0003-spsc-snapshot-pipe.md  ADR-0004-client-interpolation.md  ADR-0005-time-warp.md  ADR-0006-domain-primitives.md  ADR-0007-docs-as-code.md  F1Manager-Technical-Documentation.md  INDEX.md  MAIN_M1_PATCH.txt  ROADMAP.md  TESTING.md
include/f1tm/: events.hpp  interp.hpp  pit.hpp  race.hpp  sim.hpp  sim_runner.hpp  snap.hpp  snap_buffer.hpp  stint.hpp  track.hpp  track_geom.hpp
include/f1tm/viewer/: app.hpp
src/: events.cpp  pit.cpp  race.cpp  sim.cpp  sim_runner.cpp  stint.cpp  track.cpp
src/viewer/: app.cpp
sync_pack_gap_sectors/: MANIFEST.txt
sync_pack_gap_sectors/include/f1tm/: interp.hpp  sim.hpp  snap.hpp  telemetry.hpp  track_geom.hpp
sync_pack_gap_sectors/src/: sim.cpp  sim_runner.cpp
sync_pack_gap_sectors/src/viewer/: app.cpp
sync_pack_gap_sectors/tools/: cpp.cmd  cpp.py
tests/: CMakeLists.txt  test_events.cpp  test_interp.cpp  test_interp_multicar.cpp  test_pit.cpp  test_race.cpp  test_race_track.cpp  test_sim.cpp  test_sim_multicar.cpp  test_snap.cpp  test_stint.cpp  test_timewarp.cpp  test_track.cpp  test_track_csv.cpp
